<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E4050505"
    >


    <ImageView
        android:id="@+id/id7"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/WhatsApp_Image"
        android:layout_centerInParent="true"
        android:layout_below="@id/id6"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:textColor="#0623F1"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Class"
        android:layout_below="@id/id3"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#E4E71B1B"/>
    <TextView
        android:id="@+id/id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/id1"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#E4E71B1B" />
    <TextView
        android:id="@+id/id4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textSize="25dp"
        android:layout_below="@id/id2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#E4E71B1B"
        />
    <TextView
        android:id="@+id/id5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Universe"
        android:textSize="25dp"
        android:layout_below="@id/id4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#E4E71B1B"/>
    <TextView
        android:id="@+id/id6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthday"
        android:textSize="25dp"
        android:layout_below="@id/id5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#E4E71B1B"/>
    <CheckBox
        android:id="@+id/id8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id7"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="#D7D8DF"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textSize="20dp"
        android:layout_toRightOf="@id/id8"
        android:layout_below="@id/id7"
        android:layout_marginTop="25dp"
        android:textColor="#EDFF9800"/>
    <CheckBox
        android:id="@+id/id9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id7"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@id/id10"
        android:background="#D7D8DF"


        />
    <TextView
        android:id="@+id/id10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disagree"
        android:textSize="20dp"
        android:layout_below="@id/id7"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#EDFF9800"

        />
    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@id/id8"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:background="#36F4DE"
        android:text="@string/submit"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@id/id10"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="#36F4DE"
        android:text="@string/cancel"
        android:layout_marginRight="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textColor="#E4E71B1B"
        android:textSize="15dp"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>